# img-sanitizer

./: .bumpversion.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
img_sanitizer/: __init__.py  __main__.py  cli.py  report.py  sanitizer.py
img_sanitizer/models/: __init__.py  image.py
tests/: test_report.py  test_sanitizer.py
