[project]
name = "img-sanitizer"
version = "0.1.0"
description = "Python library designed to prepare, clean, and normalize JPEG images before publishing or archiving. "
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "piexif>=1.1.3",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.scripts]
img-sanitizer = "img_sanitizer.__main__:main"

[tool.ruff]
target-version = "py314"
line-length = 88

lint.select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
lint.ignore = [
    "E501",  # Line too long
    "D203",  # 1 blank line required before class docstring
    "D201",  # No blank lines allowed before function docstring
    "D107",  # Missing docstring in __init__
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "FA102",  # Use of mutable default argument
    "TD003",  # Missing type annotation for self in method
    "TD002",  # Missing type annotation for cls in classmethod
]
[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict = true
files = ["img_sanitizer"]
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = true
check_untyped_defs = true
explicit_package_bases = true
